Issue #341 style: Fix start-up visibility of unsupported-resolution-message in content-editor

--- a/app/styles/content-editor.css
+++ b/app/styles/content-editor.css
@@ -30,7 +30,7 @@ body {
     height: 42px !important;
 }
 
-.at-menu-image-item > .ui.image {
+.at-menu-image-item>.ui.image {
     width: 20px !important;
     height: 20px !important;
 }
@@ -53,8 +53,7 @@ body {
 }
 
 .canvas-container {
-    display: block;
-    //to prevent auto margin of canvas container
+    display: block; //to prevent auto margin of canvas container
     // margin-right: auto;
     // margin-left: auto;
     vertical-align: middle;
@@ -181,7 +180,7 @@ body {
     position: fixed;
     display: none;
     pointer-events: none;
-    background:  url(../images/geniecontrols.png);
+    background: url(../images/geniecontrols.png);
 }
 
 #geniecontrolsimage {
@@ -332,6 +331,7 @@ body {
     background: none !important;
     box-shadow: none !important;
 }
+
 .toolbar .ui.nine.wide.column,
 .toolbar .ui.icon.menu,
 .toolbar .ui.three.wide.column {
@@ -345,3 +345,42 @@ body {
     border: none;
     box-shadow: none;
 }
+
+
+
+/* unsupported resolution message style */
+
+.unsupported-resolution {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 55px;
+    display: none;
+    z-index: 10000000000;
+    background-color: rgba(192, 192, 192, 0.5);
+}
+
+@media only screen and (max-width: 1023px) {
+    .unsupported-resolution {
+        display: block;
+    }
+}
+
+.unsupported-resolution .ui.icon.negative.message {
+    position: relative;
+    width: 35%;
+    height: 20%;
+    margin: 15% auto;
+    min-width: 350px;
+    padding: 1em 0em 1em 2em;
+}
+
+.message-container .fa.fa-exclamation-triangle {
+    position: relative;
+    font-size: 40px;
+    left: -10px;
+}
+
+
+
+/* unsupported resolution message style */
